# registry

./: .gitattributes  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  TAGS.md  index.json  pyproject.toml
benchmarks/: benchmarks.yaml
datasets/: codefeedback-filtered-instruction.yaml  conll2003.yaml  drain3-behavioral.yaml  gsm8k.yaml  lmsys-chat-1m.yaml  magicoder-evol-instruct-110k.yaml  metamathqa.yaml  numina-math-cot.yaml  oasst2.yaml  opc-sft-stage2.yaml  openmathinstruct-2.yaml  openmathreasoning.yaml  opus-100.yaml  self-oss-instruct-sc2.yaml  smoltalk.yaml  spider.yaml  sql-create-context.yaml  squad-v2.yaml  ultrafeedback-binarized-preferences.yaml  wikisql.yaml  wildchat-1m.yaml
docs/: index.html  index.json
models/: aegis-nano.yaml  amber-7b.yaml  cerebras-gpt-6.7b.yaml  deepseek-coder-6.7b-instruct.yaml  falcon-7b-instruct.yaml  gemma-2-2b-it.yaml  gemma-3-1b-it.yaml  gemma-3-4b-it.yaml  gemma-4-e2b-it.yaml  granite-3-2-2b-instruct.yaml  llama-3-2-3b-instruct.yaml  llama-3.2-1b-instruct.yaml  mpt-7b-instruct.yaml  olmo-1b.yaml  olmo-7b-instruct.yaml  phi-3-mini-128k-instruct.yaml  phi-3-mini.yaml  phi-3.5-mini-instruct.yaml  phi-4-mini-instruct.yaml  pythia-1.4b.yaml  pythia-2.8b.yaml  pythia-6.9b.yaml  qwen2-5-7b-instruct.yaml  qwen2.5-0.5b-instruct.yaml  qwen2.5-1.5b-instruct.yaml  qwen2.5-3b-instruct.yaml  qwen2.5-coder-7b-instruct.yaml  qwen2.5-math-7b-instruct.yaml  qwen3-5-4b.yaml  smollm2-1.7b-instruct.yaml  smollm2-135m-instruct.yaml  smollm2-360m-instruct.yaml  smollm3-3b.yaml  stablelm-3b-4e1t.yaml  tinyllama-1-1b.yaml
(+34 files in other folders)
